security/network-policies/only-allow-idp-oss-net-bd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-a
  labels:
    app: my-app
spec:
  containers:
  - name: pod-a-container
    image: nginx
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-a2c
spec:
  podSelector:
    matchLabels:
      app: my-app
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: my-app-c
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
      - ipBlock:
          cidr: 103.205.182.18/32 # <-- Ip of idp.oss.net.bd

# to test run -->  kubectl exec pod-a -- curl https://idp.oss.net.bd  # result success
# to test run -->  kubectl exec pod-a -- curl https://google.com  # result failed
